# iol

./: CMakeLists.txt  README.md  index.html
SCSPMClassifier/: SCSPMClassifier.cpp  SCSPMClassifier.h
ScSPMClassifier/: CMakeLists.txt  SCSPMClassifier.cpp  SCSPMClassifier.h  main.cpp
app/: CMakeLists.txt
app/LUA/: iol_funcs.lua  iol_interact_fsm.lua  iol_main.lua  iol_root_fsm.lua  readme.txt  verbalInteraction.txt
app/RAD/: interactiveObjectsLearning.rad  interactiveObjectsLearningKarma.rad  verbalInteraction.txt
app/RAD/iKart/: interactiveObjectsLearning.rad  interactiveObjectsLearning2.rad  interactiveObjectsLearning3.rad  verbalInteraction.txt
app/lua/: iol_funcs.lua  iol_interact_fsm.lua  iol_main.lua  iol_root_fsm.lua  verbalInteraction.txt
app/lua/mobile/: iol_funcs_mobile.lua  iol_interact_fsm_mobile.lua  iol_main_mobile.lua  iol_root_fsm_mobile.lua
app/lua/natural/: iol_funcs_natural.lua  iol_interact_fsm_natural.lua  iol_main_natural.lua  iol_root_fsm_natural.lua
app/scripts/: interactiveObjectsLearning.xml.template  interactiveObjectsLearning_FAKE.xml.template  interactiveObjectsLearning_GUI.xml.template  interactiveObjectsLearning_MIL.xml.template  interactiveObjectsLearning_PG.xml.template  interactiveObjectsLearning_SCSPM-PG.xml.template  interactiveObjectsLearning_SCSPM.xml.template  interactiveObjectsLearning_SKIN.xml.template  iol.xml.template  iol_caffe.xml.template  iol_fake.xml.template  iol_mil.xml.template  iol_scspm.xml.template  iol_scspm_blobspotter.xml.template  iol_scspm_pg.xml.template  iol_skin.xml.template
app/scripts/legacy/: iol_scspm.xml.template  iol_scspm_pg.xml.template  iol_skin.xml.template
blobExtractor/: CMakeLists.txt  main.cpp
blobExtractor/app/: CMakeLists.txt
blobExtractor/app/conf/: config.ini
blobSelector/: CMakeLists.txt  main.cpp
blobSpotter/: .gitignore  CMakeLists.txt  blobSpotter.xml
blobSpotter/include/: blobSpotter_IDLServer.h
blobSpotter/src/: blobSpotter.cpp  main.cpp
doxygen/: doc-compile.ps1  doc-compile.sh  generate.txt
doxygen/doc/html/: CalibMatrixReq_8h_source.html  CalibPointReq_8h_source.html  annotated.html  blobSelector_2main_8cpp_source.html  classCalibMatrixReq.html  classCalibPointReq.html  classes.html  classifierHandling_8cpp_source.html  classifierHandling_8h_source.html  classifier_8cpp_source.html  classifier_8h_source.html  classiolReachingCalibration__IDL.html  dir_0a227583608ca0383b75ec107792570f.html  dir_26c08041442f9a56b70c2006b956580b.html  dir_3648f0327b1c2dada28aef909da6ab10.html  dir_4645ff81f608345662c136f5616fc3a2.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7ada8642e92421fea748eba1412364c6.html  dir_8569a68c99f310d16caa9a5165a0bbbe.html  dir_875c8ad826fdd2088841fc2e83b4b127.html  dir_94a42598429e492d281331c053046fef.html  dir_ad90daf590eb108e5d558f3d5bfe2c2d.html  dir_c55059395b01811d58fd8898911dc16b.html  dir_d70f7330ba72e4b512f6d988851521f0.html  files.html  functions.html  functions_func.html  functions_vars.html  group__icub__blobSelector.html  group__icub__himrepClassifier.html  group__icub__iolHelper.html  group__icub__iolStateMachineHandler.html  group__iolReachingCalibration.html  hierarchy.html  himrepClassifier_2main_8cpp_source.html  index.html  iolHelper_2main_8cpp_source.html  (+9 more)
doxygen/generated-from-xml/: iolReachingCalibration.dox
iolHelper/: CMakeLists.txt  main.cpp
iolLearnBooster/: CMakeLists.txt  main.cpp
iolRADHelper/: CMakeLists.txt  main.cpp
iolSpatialCoherenceBooster/: CMakeLists.txt  main.cpp
iolStateMachineHandler/: CMakeLists.txt
iolStateMachineHandler/app/: CMakeLists.txt
iolStateMachineHandler/app/conf/: config.ini  config_FAKE.ini  config_MIL.ini  config_SCSPM.ini  config_colgmm.ini  config_extclass.ini  memory_colgmm.ini  memory_extclass.ini
iolStateMachineHandler/include/: classifierHandling.h  module.h  utils.h
iolStateMachineHandler/src/: classifierHandling.cpp  main.cpp  module.cpp  utils.cpp
linearClassifier/: CMakeLists.txt  FindLibSVM.cmake  FindLibSVMLin.cmake
linearClassifier/include/: SVMLinear.h  linearClassifierThread.h
linearClassifier/src/: SVMLinear.cpp  linearClassifierModule.cpp  linearClassifierThread.cpp  main.cpp
milClassifier/: CMakeLists.txt  SiftGPU_Extractor.cpp  SiftGPU_Extractor.h  main.cpp
milClassifier/app/: CMakeLists.txt
sparseCoder/: CMakeLists.txt  DictionaryLearning.cpp  DictionaryLearning.h  main.cpp
speechRecognizer/: Program.cs  READMe.txt  SpeechRecognizerClient.cs  SpeechRecognizerServer.cs  speechRecognizer.csproj
src/: CMakeLists.txt
src/SCSPMClassifier/: SCSPMClassifier.h
src/blobExtractor/: CMakeLists.txt  main.cpp
src/blobSelector/: CMakeLists.txt  main.cpp
src/blobSpotter/: CMakeLists.txt  blobSpotter.thrift  blobSpotter.xml
src/blobSpotter/include/: blobSpotter.h  blobSpotter_IDLServer.h
src/blobSpotter/src/: blobSpotter.cpp  blobSpotter_IDLServer.cpp
src/himrepClassifier/: CMakeLists.txt  classifier.cpp  classifier.h  main.cpp
src/iolHelper/: CMakeLists.txt  main.cpp
src/iolReachingCalibration/: CMakeLists.txt  iolReachingCalibration.xml
src/iolReachingCalibration/idl_dox/: CalibMatrixReq.h  CalibPointReq.h  CalibReq.h  iolReachingCalibration_IDL.h
src/iolReachingCalibration/src/: idl.thrift  main.cpp
src/iolStateMachineHandler/: CMakeLists.txt
src/iolStateMachineHandler/app/: CMakeLists.txt
src/iolStateMachineHandler/app/conf/: config.ini  config_CAFFE.ini  config_FAKE.ini  config_SCSPM.ini  config_extclass.ini
src/iolStateMachineHandler/app/conf/legacy/: config_FAKE.ini  config_MIL.ini
src/iolStateMachineHandler/include/: classifierHandling.h  module.h  utils.h
src/iolStateMachineHandler/src/: classifierHandling.cpp  main.cpp  module.cpp  utils.cpp
src/lbpExtractor/: CMakeLists.txt  lbpExtract.thrift  lbpExtract.xml
src/lbpExtractor/app/: CMakeLists.txt
src/lbpExtractor/include/: histogram.h  lbp.h  lbpExtract.h  lbpExtract_IDLServer.h
src/lbpExtractor/src/: histogram.cpp  lbp.cpp  lbpExtract.cpp  lbpExtract_IDLServer.cpp  main.cpp
src/milClassifier/: CMakeLists.txt  FindSIFTGPU.cmake  main.cpp
(+42 files in other folders)
