# Copyright: (C) 2011 Department of Robotics Brain and Cognitive Sciences - Istituto Italiano di Tecnologia
# Authors: Ugo Pattacini, Vadim Tikhanoff, Carlo Ciliberto, Stephane Lallee, Sean Ryan Fanello
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

add_subdirectory(blobExtractor)
add_subdirectory(blobSpotter)
add_subdirectory(blobSelector)
add_subdirectory(milClassifier)
add_subdirectory(iolHelper)
add_subdirectory(iolStateMachineHandler)
add_subdirectory(iolSpatialCoherenceBooster)
add_subdirectory(himrepClassifier)
